<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/sincronizacion">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSincronizar"
            android:summaryOff="@string/no"
            android:summaryOn="@string/si"
            android:title="@string/sincronizar"/>

        <ListPreference
            android:defaultValue="@string/tipo_conexion_default"
            android:dependency="prefSincronizar"
            android:dialogTitle="@string/tipo_conexion"
            android:entries="@array/tipo_conexion_entries"
            android:entryValues="@array/tipo_conexion_values"
            android:key="prefTipoConexion"
            android:title="@string/tipo_conexion"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/apariencia">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefLetrasGrandes"
            android:summaryOff="@string/no"
            android:summaryOn="@string/si"
            android:title="@string/letras_grandes"/>
        <!--
        <MultiSelectListPreference
            android:defaultValue="@array/turnos_default"
            android:dialogTitle="@string/turnos"
            android:entries="@array/turnos_entries"
            android:entryValues="@array/turnos_values"
            android:key="prefTurnos"
            android:summary="@string/turnos_detalle"
            android:title="@string/turnos"/>
        -->
        <Preference android:title="@string/web_oficial">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.iessaladillo.es"/>
        </Preference>
        <PreferenceScreen
            android:key="PrefOtras"
            android:title="@string/otras">

            <EditTextPreference
                android:dialogTitle="@string/lema"
                android:key="prefLema"
                android:summary="@string/lema_detalle"
                android:title="@string/lema"/>

            <es.iessaladillo.pedrojoya.pr152.utils.PasswordPreference
                android:dialogTitle="@string/password"
                android:key="prefPassword"
                android:summary="@string/password_detalle"
                android:title="@string/password"/>

            <SwitchPreferenceCompat
                android:key="prefRed"
                android:summaryOff="@string/red_detalle_off"
                android:summaryOn="@string/red_detalle_on"
                android:switchTextOff="@string/no"
                android:switchTextOn="@string/si"
                android:title="@string/red"/>

            <android.support.v7.preference.SeekBarPreference
                android:key="prefRendimiento"
                android:title="@string/rendimiento"
                app:min="1"
                android:max="5"
                android:defaultValue="3"
                app:seekBarIncrement="1"
                app:adjustable="true"
                app:showSeekBarValue="false"/>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>